# powerpax

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: changes.rst  conf.py  index.rst  install.rst  reference.rst  requirements.txt
src/powerpax/: __init__.py  _loop.py  _tree.py  _vmap.py
tests/: test_checkpoint_chunked_scan.py  test_chunked_vmap.py  test_misc.py  test_sliced_scan.py  test_static.py
