[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "powerpax"
description = "Small collection of useful utilities for JAX"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Karl Otness"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
  "jax>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/karlotness/powerpax"
"Source Code" = "https://github.com/karlotness/powerpax"
"Bug Tracker" = "https://github.com/karlotness/powerpax/issues"

[tool.flit.sdist]
include = ["tests/", "LICENSE.txt"]
exclude = ["**/*~"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
  "--import-mode=importlib",
]

[tool.ruff]
target-version = "py39"
select = ["E", "F", "W", "B", "RUF", "UP", "C4", "YTT", "T10", "T20", "ICN", "SIM"]
ignore = ["E741", "E743", "UP015", "SIM108"]
exclude = ["docs/_build/"]
src = ["src"]
line-length = 88
respect-gitignore = false
fix = false

[tool.ruff.flake8-import-conventions]
[tool.ruff.flake8-import-conventions.extend-aliases]
"jax.numpy" = "jnp"
"equinox" = "eqx"
"powerpax" = "ppx"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = false
