[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "powerpax"
description = "Small collection of useful utilities for JAX"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
  {name = "Karl Otness"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

dependencies = [
  "jax>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/karlotness/powerpax"
Documentation = "https://powerpax.readthedocs.io"
"Source Code" = "https://github.com/karlotness/powerpax"
"Bug Tracker" = "https://github.com/karlotness/powerpax/issues"

[tool.flit.sdist]
include = ["tests/"]
exclude = ["**/*~"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
  "--import-mode=importlib",
]

[tool.ruff]
extend-exclude = ["docs/_build/"]
src = ["src"]
line-length = 88
respect-gitignore = true
fix = false

[tool.ruff.lint]
select = ["E", "F", "W", "B", "RUF", "UP", "C4", "YTT", "T10", "T20", "ICN", "SIM", "NPY", "PT"]
ignore = ["E741", "E743", "UP015", "SIM108", "RUF022"]

[tool.ruff.lint.flake8-import-conventions]
[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"jax.numpy" = "jnp"
"equinox" = "eqx"
"powerpax" = "ppx"

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = false
